--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/954805'>Make blink_headers depend on media_devices_mojo_bindings</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-03-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/970901'>Fix dom/ranges/Range-compareBoundaryPoints.html on ARM</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-03-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/975501'>Add autoGainControl and noiseSuppression to MediaTrackConstraintSet</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-03-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/965683'>Return boolean for the replace method in DOMTokenList</a></td><td>Yuhong Sha</td></tr>
