--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/977801'>Add autoGainControl and noiseSuppression to MediaTrackSupportedConstraints</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-03-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/970223'>Passwords are truncated without indication</a></td><td>qi1988.yang</td></tr>
 <tr><td>2018-03-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/975921'>Remove superflous include from r545078</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-03-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/954805'>Make blink_headers depend on media_devices_mojo_bindings</a></td><td>Chandan Padhi</td></tr>
