--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/977251'>Add support for autoGainControl and noiseSuppression to getCapabilities()</a></td><td>Chandan Padhi</td></tr>
+<tr><td>2018-03-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/977365'>Introduce InsertCommands to split EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/978225'>Rectify comments in media_devices.mojom</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-03-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/973321'>Username are truncated and can't copied fully</a></td><td>qi1988.yang</td></tr>
 <tr><td>2018-03-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/977801'>Add autoGainControl and noiseSuppression to MediaTrackSupportedConstraints</a></td><td>Chandan Padhi</td></tr>
