--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/685054'>Hiding touch handles during stylus button selection</a></td><td>AJITH KUMAR V</td></tr>
 <tr><td>2018-03-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/973561'>[css-typed-om] support block-size and inline-size</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-03-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/977249'>Specify time units (us) in time members of</a></td><td>Lizhi Fan</td></tr>
 <tr><td>2018-03-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/977251'>Add support for autoGainControl and noiseSuppression to getCapabilities()</a></td><td>Chandan Padhi</td></tr>
