--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/981714'>Move InsertCommands to InsertCommands.cpp from EditorCommand.cpp.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/977846'>Convert app cache to use url::Origin instead of GURL</a></td><td>Xunran Ding</td></tr>
 <tr><td>2018-03-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/685054'>Hiding touch handles during stylus button selection</a></td><td>AJITH KUMAR V</td></tr>
 <tr><td>2018-03-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/973561'>[css-typed-om] support block-size and inline-size</a></td><td>Hwanseung Lee</td></tr>
