--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/983201'>Move MoveCommands to MoveCommands.cpp from EditorCommand.cpp.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/983077'>[css-typed-om] support x, y, cx, cy properties</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-03-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/981971'>Introduce MoveCommands to split EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/981918'>[css-typed-om] support r and rx and ry properties</a></td><td>Hwanseung Lee</td></tr>
