--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/985596'>Introduce StyleCommands to split EditorCommand.cpp</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-03-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/980273'>Remove [CEReactions] from [PutForward] readonly attributes</a></td><td>Yuhong Sha</td></tr>
+<tr><td>2018-03-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/979894'>Deprecate to use Node::MaxCharacterOffset() api</a></td><td>Yuhong Sha</td></tr>
 <tr><td>2018-03-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/981962'>Convert AppCacheService to use url::Origin instead of GURL</a></td><td>Xunran Ding</td></tr>
 <tr><td>2018-03-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/973103'>Process next node before hand while removing unstyled span.</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-03-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/967912'>Check BackgroundEdgeOrigin when check BackgroundPosition.</a></td><td>Zhuoyu Qian</td></tr>
