--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-03-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/985679'>Change WritingDirection to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/985678'>Remove the useless MaxCharacterOffset() api</a></td><td>Yuhong Sha</td></tr>
 <tr><td>2018-03-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/981734'>[Stylus Text Selection] Interpretting Stylus Secondary button as HANDLE_DRAG</a></td><td>AJITH KUMAR V</td></tr>
 <tr><td>2018-03-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/985515'>Replace WTF_MAKE_NONCOPYABLE with DISALLOW_COPY_AND_ASSIGN in Source/core/*</a></td><td>Yuhong Sha</td></tr>
