--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-04-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/989531'>Use screen size as default resolution for screen capture</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-04-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/987652'>Move StyleCommands to StyleCommands.cpp from EditorCommand.cpp.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/985679'>Change WritingDirection to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/985678'>Remove the useless MaxCharacterOffset() api</a></td><td>Yuhong Sha</td></tr>
