--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-04-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/982557'>Make font shorthand initial/inherit parsing less strict</a></td><td>Rob Buis</td></tr>
+<tr><td>2018-04-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/989852'>Make ApplyStyleCommand::UpdateStartEnd to take EphemeralRange</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-04-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/989531'>Use screen size as default resolution for screen capture</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-04-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/987652'>Move StyleCommands to StyleCommands.cpp from EditorCommand.cpp.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-03-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/985679'>Change WritingDirection to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
