--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-04-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/989595'>[Android] Optimizing event offset operation during hover event processing</a></td><td>AJITH KUMAR V</td></tr>
 <tr><td>2018-04-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/992081'>Use screen size as maximum size in getCapabilities() for content capture</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-04-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/982557'>Make font shorthand initial/inherit parsing less strict</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-04-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/989852'>Make ApplyStyleCommand::UpdateStartEnd to take EphemeralRange</a></td><td>tanvir.rizvi</td></tr>
