--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-04-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/989633'>fixup! Introduce SupportsARIAExpanded() for aria-expanded</a></td><td>DongJun Kim</td></tr>
 <tr><td>2018-04-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/989644'>Credentials: Remove unnecessary IsSecureContext() check</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-04-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/989595'>[Android] Optimizing event offset operation during hover event processing</a></td><td>AJITH KUMAR V</td></tr>
 <tr><td>2018-04-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/992081'>Use screen size as maximum size in getCapabilities() for content capture</a></td><td>Chandan Padhi</td></tr>
