--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-04-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1000657'>Use GetCaretTextFromBody instead of GetSelectionTextFromBody.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-04-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/986121'>PaymentHandler: Replace 'enabledMethods' array with 'method' string</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-04-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/989537'>WebNFC: Use [SecureContext] instead of manual check</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-04-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/996837'>Clone MediaStreamTrack's readyState property</a></td><td>Chandan Padhi</td></tr>
