--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-04-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/753102'>Revert "Remove old position adjustment for non-snap-to-lines WebVTT cues"</a></td><td>Sriram</td></tr>
 <tr><td>2018-04-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1001437'>Use EphemeralRange in ApplyStyleCommand::RemoveInlineStyle</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-04-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1000655'>Add overloaded GetSelectionTextFromBody() to simplify code.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-04-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1000657'>Use GetCaretTextFromBody instead of GetSelectionTextFromBody.</a></td><td>Zhuoyu Qian</td></tr>
