--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-04-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/989538'>BudgetService: Use [SecureContext] instead of manual check</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-04-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1011883'>Add use counter for cursor with prefixed grab and grabbing value</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-04-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1008102'>Fix regression allowing text value for -webkit-background-origin</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-04-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1007294'>add use counter for resize with auto value</a></td><td>Hwanseung Lee</td></tr>
