--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-04-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1013664'>PaymentHandler: Not allow to call operation if event is not trusted</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-04-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/986502'>Make animation/transition use real initial values for its longhands</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-04-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/989538'>BudgetService: Use [SecureContext] instead of manual check</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-04-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1011883'>Add use counter for cursor with prefixed grab and grabbing value</a></td><td>Hwanseung Lee</td></tr>
