--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-04-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/960422'>Fix errorprone MissingFail warnings</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-04-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/990772'>Do not accept negative values for brightness filter</a></td><td>Rob Buis</td></tr>
 <tr><td>2018-04-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/989383'>[Cleanup] Remove "TODO:rename to kRemoteSuggestionsFeature"</a></td><td>fr.fang</td></tr>
 <tr><td>2018-04-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1013660'>PaymentHandler: Add [SameObject] to paymentManager and instruments attr</a></td><td>Jinho Bang</td></tr>
