--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-04-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1027598'>Delete TESTS files in chrome/tools/build/</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-04-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1012047'>Support grab and grabbing values for cursor property</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-04-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1013659'>PaymentHandler: Should use NotAllowedError instead of InvalidAccessError</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-04-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1025539'>Add forward declaration for TextAffinity in PWA</a></td><td>tanvir.rizvi</td></tr>
