--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-05-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/896672'>Refactoring aria-haspopup</a></td><td>DongJun Kim</td></tr>
 <tr><td>2018-05-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1038864'>Fix download links from chrome://indexeddb-internals/</a></td><td>Xunran Ding</td></tr>
 <tr><td>2018-05-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1016180'>Replace DCHECK with null check for selection_popup_controller_ in RWHVA</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2018-04-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1029396'>Fix some dead links in docs</a></td><td>Euisang Lim</td></tr>
