--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-05-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1053027'>PaymentRequest: Add a use counter to count invalid currency code</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-05-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1049767'>Fix some dead links in docs/testing</a></td><td>Euisang Lim</td></tr>
 <tr><td>2018-05-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1034618'>[css-typed-om] Use CSSOMString instead of DOMString</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-05-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/896672'>Refactoring aria-haspopup</a></td><td>DongJun Kim</td></tr>
