--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-05-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1055229'>[WebUI] highlighted tab color to Google Blue 600</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-05-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1057648'>[WebUI] Update cr-action-menu hover background color</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-05-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1055132'>[WebUI] Toast button shuld not have hairline</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-05-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1045705'>PaymentHandler: Change topLevelOrigin to topOrigin</a></td><td>Jinho Bang</td></tr>
