--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-05-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1065956'>Fix some dead links in docs</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-05-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1055029'>[WebUI] Change the background color for Web UI pages</a></td><td>Euisang Lim</td></tr>
 <tr><td>2018-05-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1062986'>libaom: enable generation of linux/arm-neon config</a></td><td>David Michael Barr</td></tr>
 <tr><td>2018-05-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1056928'>[WebUI] Update corner radius of all cards</a></td><td>Euisang Lim</td></tr>
