--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-05-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1065958'>Replace ContextUtils.startForegroundService with support library</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-05-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1071499'>PaymentRequest: Fix some mis-use std::move in payments</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-05-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1049425'>Fix setting image's alt text content in html_image_element.cc.</a></td><td>v.paturi</td></tr>
 <tr><td>2018-05-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1071158'>Support groupId in MediaStreamTrack.getCapabilities() for audio tracks</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-05-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/762544'>Return Clip Rect also during Smart clip extraction</a></td><td>Mahesh Machavolu</td></tr>
