--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-05-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1078590'>Support groupId in MediaDevices.getUserMedia() for audio tracks</a></td><td>Chandan Padhi</td></tr>
+<tr><td>2018-05-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1077715'>libaom: tidy files for cmake config</a></td><td>David Michael Barr</td></tr>
 <tr><td>2018-05-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1074797'>libaom: move aom_config to config sub dir</a></td><td>David Michael Barr</td></tr>
 <tr><td>2018-05-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1068902'>libaom: generators for alternate linux/arm configs</a></td><td>David Michael Barr</td></tr>
 <tr><td>2018-05-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1074607'>Replace WTF_MAKE_NONCOPYABLE with DISALLOW_COPY_AND_ASSIGN in renderer/platform/graphics/*</a></td><td>Amos Lim</td></tr>
