--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-05-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1077879'>[GamePad] remove unused LatestConnectionChange() function.</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-05-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1078590'>Support groupId in MediaDevices.getUserMedia() for audio tracks</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-05-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1077715'>libaom: tidy files for cmake config</a></td><td>David Michael Barr</td></tr>
 <tr><td>2018-05-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1074797'>libaom: move aom_config to config sub dir</a></td><td>David Michael Barr</td></tr>
