--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-06-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1086953'>Remove extra form data, if "value" attribute present with non-empty value</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2018-06-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1086951'>Start TraceOutputter thread only when required</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2018-06-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1081769'>libaom: remove config for neon assembly</a></td><td>David Michael Barr</td></tr>
 <tr><td>2018-06-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1070957'>PaymentHandler: Fix a crash when creating event object with empty data</a></td><td>Jinho Bang</td></tr>
