--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-06-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1095125'>Abort editingState if insertNode after a disconnected parent</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-06-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1065955'>Cleanup ChromeSSLHostStateDelegate</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-06-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1036824'>Move audio files from //content/rendenrer/media to .../audio</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-06-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1086953'>Remove extra form data, if "value" attribute present with non-empty value</a></td><td>Shanmuga Pandi M</td></tr>
