--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-06-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/952882'>Changed std::find() to ContainsValue() in src/chrome/browser* - Set 1</a></td><td>Ganesh Borle</td></tr>
 <tr><td>2018-06-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1090698'>Adding missing braces to AXMenuListPopup::DidHide()</a></td><td>DongJun Kim</td></tr>
 <tr><td>2018-06-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1094818'>Return Visible Touch Handle height for RWHVA::GetTouchHandleHeight</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2018-06-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1095125'>Abort editingState if insertNode after a disconnected parent</a></td><td>tanvir.rizvi</td></tr>
