--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-06-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1099097'>Check correct text style in AccessibilityTextStyleItalicPredicate</a></td><td>deejay</td></tr>
 <tr><td>2018-06-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1100370'>libaom: remove obsolete cflags</a></td><td>David Michael Barr</td></tr>
 <tr><td>2018-06-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1097049'>Rename ModelTypeSyncBridge::GetAllData()</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-06-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/952882'>Changed std::find() to ContainsValue() in src/chrome/browser* - Set 1</a></td><td>Ganesh Borle</td></tr>
