--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-06-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1102440'>Use ContainsValue() instead of std::find() at components/translate</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-06-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1102283'>Use ContainsValue() instead of std::find() at components/payments</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-06-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1099097'>Check correct text style in AccessibilityTextStyleItalicPredicate</a></td><td>deejay</td></tr>
 <tr><td>2018-06-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1100370'>libaom: remove obsolete cflags</a></td><td>David Michael Barr</td></tr>
