--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-06-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1107429'>Use ContainsValue() instead of std::find() at components -2-</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-06-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1078687'>PaymentRequest: Remove the sequence version of supportedMethods (renderer)</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-06-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1107426'>Use ContainsValue() instead of std::find() at components</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-06-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/818666'>ServiceWorker: Use [SecureContext] instead of manual check</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-06-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1102439'>Use ContainsValue() instead of std::find() at components/sync*</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-06-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1102440'>Use ContainsValue() instead of std::find() at components/translate</a></td><td>Hwanseung Lee</td></tr>
