--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-06-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1102218'>jumbo: stable assignment of inputs to chunks</a></td><td>David Michael Barr</td></tr>
 <tr><td>2018-06-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1106057'>Remove not needed header inclusion</a></td><td>Uzair Jaleel</td></tr>
 <tr><td>2018-06-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1049587'>Cleaning color.cc to chromium style.</a></td><td>Yuvanesh Natarajan</td></tr>
 <tr><td>2018-06-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1075956'>Navigating to fragment scrolls with writing-mode: vertical-rl</a></td><td>Suneel Kota</td></tr>
