--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-06-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1119615'>libaom: remove obsolete yasm define</a></td><td>David Michael Barr</td></tr>
 <tr><td>2018-06-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1114406'>Use ContainsValue() instead of std::find() at components -3-</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-06-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1077713'>[WebAudio] throw an error when buffer has been already set.</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-06-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1102218'>jumbo: stable assignment of inputs to chunks</a></td><td>David Michael Barr</td></tr>
