--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-07-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1128825'>PaymentRequest: Add [NewObject] annotations to methods</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-07-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1124207'>Rename SelectLineBreak to SelectSoftLineBreak</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-07-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/989529'>Background-size should not accept negative values.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-06-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1119615'>libaom: remove obsolete yasm define</a></td><td>David Michael Barr</td></tr>
