--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-07-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1128899'>Convert editing/execCommand/15381.html to use selection_test</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-07-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1131355'>Generate java POPUP_ITEM_ID constants from PopupItemId enum</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-07-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1124719'>Use ContainsValue() instead of std::find() at components -4-</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-07-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1128825'>PaymentRequest: Add [NewObject] annotations to methods</a></td><td>Jinho Bang</td></tr>
