--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,10 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-07-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1102218'>Reland "jumbo: stable assignment of inputs to chunks"</a></td><td>David Michael Barr</td></tr>
+<tr><td>2018-07-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1128826'>PaymentRequest: Initial implementation of retry()</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-07-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1132267'>libaom: defer RTCD header generation to cmake</a></td><td>David Michael Barr</td></tr>
+<tr><td>2018-07-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1128796'>Convert storage/browser/fileapi/quota to use url::Origin</a></td><td>Xunran Ding</td></tr>
 
 <script>
 $(document).ready(function() {
