--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-07-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1135110'>Fix parcelable implementations without CREATOR in code</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-07-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1138035'>Replace WTF_MAKE_NONCOPYABLE with DISALLOW_COPY_AND_ASSIGN in renderer/modules/credentialmanager/*</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-07-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1136341'>Move CredentialManager interface into blink.mojom namespace</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-07-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1134936'>Use ContainsValue() instead of std::find() at components -5-</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-07-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1130566'>Qualify const char[] sql queries with |static|</a></td><td>Xunran Ding</td></tr>
