--- a/commits.html
+++ b/commits.html
@@ -13,18 +13,18 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
-<tr><td>2018-07-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1140236'>Set "application/octet-stream" content type for empty &lt;input type=file&gt;</a></td><td>Amos Lim</td></tr>
-<tr><td>2018-07-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1108057'>PaymentRequest: Remove the sequence version of supportedMethods (browser)</a></td><td>Jinho Bang</td></tr>
-<tr><td>2018-07-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1135110'>Fix parcelable implementations without CREATOR in code</a></td><td>Amos Lim</td></tr>
-<tr><td>2018-07-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1138035'>Replace WTF_MAKE_NONCOPYABLE with DISALLOW_COPY_AND_ASSIGN in renderer/modules/credentialmanager/*</a></td><td>Amos Lim</td></tr>
-<tr><td>2018-07-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1136341'>Move CredentialManager interface into blink.mojom namespace</a></td><td>Amos Lim</td></tr>
-<tr><td>2018-07-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1134936'>Use ContainsValue() instead of std::find() at components -5-</a></td><td>Hwanseung Lee</td></tr>
-<tr><td>2018-07-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1130566'>Qualify const char[] sql queries with |static|</a></td><td>Xunran Ding</td></tr>
-<tr><td>2018-07-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1134828'>Fix format string without passing in the variables in code</a></td><td>Amos Lim</td></tr>
-<tr><td>2018-07-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1102218'>Reland "jumbo: stable assignment of inputs to chunks"</a></td><td>David Michael Barr</td></tr>
-<tr><td>2018-07-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1128826'>PaymentRequest: Initial implementation of retry()</a></td><td>Jinho Bang</td></tr>
-<tr><td>2018-07-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1132267'>libaom: defer RTCD header generation to cmake</a></td><td>David Michael Barr</td></tr>
-<tr><td>2018-07-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1128796'>Convert storage/browser/fileapi/quota to use url::Origin</a></td><td>Xunran Ding</td></tr>
+<tr><td>2018-07-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1140236'>subject</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-07-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1108057'>subject</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-07-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1135110'>subject</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-07-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1138035'>subject</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-07-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1136341'>subject</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-07-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1134936'>subject</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-07-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1130566'>subject</a></td><td>Xunran Ding</td></tr>
+<tr><td>2018-07-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1134828'>subject</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-07-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1102218'>subject</a></td><td>David Michael Barr</td></tr>
+<tr><td>2018-07-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1128826'>subject</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-07-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1132267'>subject</a></td><td>David Michael Barr</td></tr>
+<tr><td>2018-07-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1128796'>subject</a></td><td>Xunran Ding</td></tr>
 
 <script>
 $(document).ready(function() {
