--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-07-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1141753'>PaymentRequest: Fix a typo in wpt test</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-07-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1139454'>Move Authenticator interface into blink.mojom namespace</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-07-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1142044'>PaymentRequest: Drop prefixes, suffixes from error field members</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-07-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1136264'>Move 15381.html to justify_center_do_not_modify_root_editable.html</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-07-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1140236'>Set "application/octet-stream" content type for empty &lt;input type=file&gt;</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-07-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1108057'>PaymentRequest: Remove the sequence version of supportedMethods (browser)</a></td><td>Jinho Bang</td></tr>
